test/files/neg/quickfix-silent.scala
// scalac: -deprecation -Werror -quickfix:silent

class C {
  def f { println }
}
